Updated pack icons

--- a/Simple Bright Colours/com.cliftonharvey.simplebrightcolours.sdIconPack/manifest.json
+++ b/Simple Bright Colours/com.cliftonharvey.simplebrightcolours.sdIconPack/manifest.json
@@ -1,9 +1,9 @@
 {
     "Name": "Simple Bright Colours",
-    "Version": "1.0.0",
+    "Version": "1.0.1",
     "Description": "26 background icons in basic colours with brighter tones. Use these in combination with text titles for eye-catching buttons.",
     "Author": "Rob Clifton-Harvey",
     "URL": "https://clifton-harvey.com/",
-    "Icon": "icon.png",
+    "Icon": "Icon Simple Bright Colours.png",
     "License": "license.txt"
 }
